feat: migrate project from CommonJS to ES Modules (ESM)
Convert NgxSherlock to use ES Modules throughout the entire project for better tree-shaking, modern bundling support, and future-proofing.

### Major Changes:
- **Package configuration**: Add `"type": "module"` to all package.json files
- **Library output**: Generate .mjs files instead of .js for proper ESM compatibility
- **TypeScript config**: Update module system to ES2022 with node16 resolution
- **Build tooling**: Rename Karma configs to .cjs to maintain CommonJS for testing

### Technical Details:
- Root package.json: Added `"type": "module"` field
- Library package.json: Configure ESM exports with proper main/module/typings paths
- tsconfig.json: Upgrade to module "ES2022" with "node16" moduleResolution
- Angular.json: Update karma config paths to use .cjs extensions
- Karma configs: Renamed to .cjs to preserve CommonJS for build tools

### Build Output:
- FESM bundles now generate .mjs files
- Better tree-shaking support for consuming applications
- Native ESM compatibility with Node.js 16+
- Improved bundler optimization with modern module standards

### Benefits:
- ✅ Enhanced tree-shaking and dead code elimination
- ✅ Better performance with modern bundlers (Webpack 5, Vite, esbuild)
- ✅ Future-proof JavaScript ecosystem compatibility
- ✅ Improved TypeScript IDE support for imports
- ✅ Native Node.js 16+ ESM support

BREAKING CHANGE: Library now outputs ESM format. Consuming applications must support ES Modules

--- a/angular.json
+++ b/angular.json
@@ -1,158 +1,142 @@
 {
-  "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1,
-  "newProjectRoot": "projects",
-  "projects": {
-    "ngx-sherlock-dev": {
-      "root": "",
-      "sourceRoot": "src",
-      "projectType": "application",
-      "prefix": "app",
-      "schematics": {},
-      "architect": {
-        "build": {
-          "builder": "@angular-devkit/build-angular:application",
-          "options": {
-            "outputPath": {
-              "base": "dist/ngx-sherlock-dev"
-            },
-            "index": "src/index.html",
-            "polyfills": [
-              "src/polyfills.ts"
-            ],
-            "tsConfig": "src/tsconfig.app.json",
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ],
-            "styles": [
-              "src/styles.css"
-            ],
-            "scripts": [],
-            "extractLicenses": false,
-            "sourceMap": true,
-            "optimization": false,
-            "namedChunks": true,
-            "browser": "src/main.ts"
-          },
-          "configurations": {
-            "production": {
-              "budgets": [
-                {
-                  "type": "anyComponentStyle",
-                  "maximumWarning": "6kb"
+    "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+    "version": 1,
+    "newProjectRoot": "projects",
+    "projects": {
+        "ngx-sherlock-dev": {
+            "root": "",
+            "sourceRoot": "src",
+            "projectType": "application",
+            "prefix": "app",
+            "schematics": {},
+            "architect": {
+                "build": {
+                    "builder": "@angular-devkit/build-angular:application",
+                    "options": {
+                        "outputPath": {
+                            "base": "dist/ngx-sherlock-dev"
+                        },
+                        "index": "src/index.html",
+                        "polyfills": ["src/polyfills.ts"],
+                        "tsConfig": "src/tsconfig.app.json",
+                        "assets": ["src/favicon.ico", "src/assets"],
+                        "styles": ["src/styles.css"],
+                        "scripts": [],
+                        "extractLicenses": false,
+                        "sourceMap": true,
+                        "optimization": false,
+                        "namedChunks": true,
+                        "browser": "src/main.ts"
+                    },
+                    "configurations": {
+                        "production": {
+                            "budgets": [
+                                {
+                                    "type": "anyComponentStyle",
+                                    "maximumWarning": "6kb"
+                                }
+                            ],
+                            "fileReplacements": [
+                                {
+                                    "replace": "src/environments/environment.ts",
+                                    "with": "src/environments/environment.prod.ts"
+                                }
+                            ],
+                            "optimization": true,
+                            "outputHashing": "all",
+                            "sourceMap": false,
+                            "namedChunks": false,
+                            "extractLicenses": true
+                        }
+                    },
+                    "defaultConfiguration": ""
+                },
+                "serve": {
+                    "builder": "@angular-devkit/build-angular:dev-server",
+                    "options": {
+                        "buildTarget": "ngx-sherlock-dev:build"
+                    },
+                    "configurations": {
+                        "production": {
+                            "buildTarget": "ngx-sherlock-dev:build:production"
+                        }
+                    }
+                },
+                "extract-i18n": {
+                    "builder": "@angular-devkit/build-angular:extract-i18n",
+                    "options": {
+                        "buildTarget": "ngx-sherlock-dev:build"
+                    }
+                },
+                "test": {
+                    "builder": "@angular-devkit/build-angular:karma",
+                    "options": {
+                        "main": "src/test.ts",
+                        "polyfills": "src/polyfills.ts",
+                        "tsConfig": "src/tsconfig.spec.json",
+                        "karmaConfig": "src/karma.conf.cjs",
+                        "styles": ["src/styles.css"],
+                        "scripts": [],
+                        "assets": ["src/favicon.ico", "src/assets"]
+                    }
+                },
+                "lint": {
+                    "builder": "@angular-eslint/builder:lint",
+                    "options": {
+                        "lintFilePatterns": ["src/**/*.ts", "src/**/*.html"]
+                    }
                 }
-              ],
-              "fileReplacements": [
-                {
-                  "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment.prod.ts"
+            }
+        },
+        "@politie/ngx-sherlock": {
+            "root": "projects/politie/ngx-sherlock",
+            "sourceRoot": "projects/politie/ngx-sherlock/src",
+            "projectType": "library",
+            "prefix": "lib",
+            "architect": {
+                "build": {
+                    "builder": "@angular-devkit/build-angular:ng-packagr",
+                    "options": {
+                        "tsConfig": "projects/politie/ngx-sherlock/tsconfig.lib.json",
+                        "project": "projects/politie/ngx-sherlock/ng-package.json"
+                    },
+                    "configurations": {
+                        "production": {
+                            "tsConfig": "projects/politie/ngx-sherlock/tsconfig.lib.prod.json"
+                        }
+                    }
+                },
+                "test": {
+                    "builder": "@angular-devkit/build-angular:karma",
+                    "options": {
+                        "main": "projects/politie/ngx-sherlock/src/test.ts",
+                        "tsConfig": "projects/politie/ngx-sherlock/tsconfig.spec.json",
+                        "karmaConfig": "projects/politie/ngx-sherlock/karma.conf.cjs"
+                    }
+                },
+                "lint": {
+                    "builder": "@angular-eslint/builder:lint",
+                    "options": {
+                        "lintFilePatterns": [
+                            "projects/politie/ngx-sherlock/**/*.ts",
+                            "projects/politie/ngx-sherlock/**/*.html"
+                        ]
+                    }
                 }
-              ],
-              "optimization": true,
-              "outputHashing": "all",
-              "sourceMap": false,
-              "namedChunks": false,
-              "extractLicenses": true
             }
-          },
-          "defaultConfiguration": ""
-        },
-        "serve": {
-          "builder": "@angular-devkit/build-angular:dev-server",
-          "options": {
-            "buildTarget": "ngx-sherlock-dev:build"
-          },
-          "configurations": {
-            "production": {
-              "buildTarget": "ngx-sherlock-dev:build:production"
-            }
-          }
-        },
-        "extract-i18n": {
-          "builder": "@angular-devkit/build-angular:extract-i18n",
-          "options": {
-            "buildTarget": "ngx-sherlock-dev:build"
-          }
-        },
-        "test": {
-          "builder": "@angular-devkit/build-angular:karma",
-          "options": {
-            "main": "src/test.ts",
-            "polyfills": "src/polyfills.ts",
-            "tsConfig": "src/tsconfig.spec.json",
-            "karmaConfig": "src/karma.conf.js",
-            "styles": [
-              "src/styles.css"
-            ],
-            "scripts": [],
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ]
-          }
-        },
-        "lint": {
-          "builder": "@angular-eslint/builder:lint",
-          "options": {
-            "lintFilePatterns": [
-              "src/**/*.ts",
-              "src/**/*.html"
-            ]
-          }
         }
-      }
     },
-    "@politie/ngx-sherlock": {
-      "root": "projects/politie/ngx-sherlock",
-      "sourceRoot": "projects/politie/ngx-sherlock/src",
-      "projectType": "library",
-      "prefix": "lib",
-      "architect": {
-        "build": {
-          "builder": "@angular-devkit/build-angular:ng-packagr",
-          "options": {
-            "tsConfig": "projects/politie/ngx-sherlock/tsconfig.lib.json",
-            "project": "projects/politie/ngx-sherlock/ng-package.json"
-          },
-          "configurations": {
-            "production": {
-              "tsConfig": "projects/politie/ngx-sherlock/tsconfig.lib.prod.json"
-            }
-          }
+    "cli": {
+        "packageManager": "npm",
+        "schematicCollections": ["@angular-eslint/schematics"],
+        "analytics": false
+    },
+    "schematics": {
+        "@angular-eslint/schematics:application": {
+            "setParserOptionsProject": true
         },
-        "test": {
-          "builder": "@angular-devkit/build-angular:karma",
-          "options": {
-            "main": "projects/politie/ngx-sherlock/src/test.ts",
-            "tsConfig": "projects/politie/ngx-sherlock/tsconfig.spec.json",
-            "karmaConfig": "projects/politie/ngx-sherlock/karma.conf.js"
-          }
-        },
-        "lint": {
-          "builder": "@angular-eslint/builder:lint",
-          "options": {
-            "lintFilePatterns": [
-              "projects/politie/ngx-sherlock/**/*.ts",
-              "projects/politie/ngx-sherlock/**/*.html"
-            ]
-          }
+        "@angular-eslint/schematics:library": {
+            "setParserOptionsProject": true
         }
-      }
     }
-  },
-  "cli": {
-    "packageManager": "npm",
-    "schematicCollections": [
-      "@angular-eslint/schematics"
-    ]
-  },
-  "schematics": {
-    "@angular-eslint/schematics:application": {
-      "setParserOptionsProject": true
-    },
-    "@angular-eslint/schematics:library": {
-      "setParserOptionsProject": true
-    }
-  }
 }
