--- a/package.json
+++ b/package.json
@@ -1,65 +1,66 @@
 {
-  "name": "ngx-sherlock-dev",
-  "version": "3.3.2",
-  "scripts": {
-    "start": "export NODE_OPTIONS=--openssl-legacy-provider && FORCE_COLOR=1 npm-run-all -l -p watch:*",
-    "start:app": "export NODE_OPTIONS=--openssl-legacy-provider && ng serve --open",
-    "watch:lib": "ng build @politie/ngx-sherlock --watch",
-    "watch:app": "sleep 10 && ng serve --open",
-    "clean": "rimraf coverage dist",
-    "build:dev": "ng build @politie/ngx-sherlock",
-    "build:prod": "ng build @politie/ngx-sherlock --configuration production",
-    "test": "ng test @politie/ngx-sherlock",
-    "test:ci": "ng test @politie/ngx-sherlock --no-watch --browsers=ChromeHeadless --code-coverage",
-    "lint": "ng lint",
-    "precommit": "npm-run-all clean lint test:ci build:prod precommit:e2e",
-    "precommit:e2e": "run-p start:app cypress:run",
-    "cypress:open": "cypress open --e2e --browser chrome",
-    "cypress:run": "cypress run --e2e --browser chrome"
-  },
-  "private": true,
-  "license": "Apache-2.0",
-  "dependencies": {
-    "@angular/animations": "^18.2.14",
-    "@angular/common": "^18.2.14",
-    "@angular/compiler": "^18.2.14",
-    "@angular/core": "^18.2.14",
-    "@angular/forms": "^18.2.14",
-    "@angular/platform-browser": "^18.2.14",
-    "@angular/platform-browser-dynamic": "^18.2.14",
-    "@politie/sherlock": "^3.4.16",
-    "@politie/sherlock-proxy": "^3.4.16",
-    "@politie/sherlock-rxjs": "^3.4.16",
-    "rxjs": "^6.6.7",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.14.10"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "^18.2.21",
-    "@angular-eslint/builder": "18.4.3",
-    "@angular-eslint/eslint-plugin": "18.4.3",
-    "@angular-eslint/eslint-plugin-template": "18.4.3",
-    "@angular-eslint/schematics": "18.4.3",
-    "@angular-eslint/template-parser": "18.4.3",
-    "@angular/cli": "^18.2.21",
-    "@angular/compiler-cli": "^18.2.14",
-    "@angular/language-service": "^18.2.14",
-    "@types/jasmine": "^5.1.9",
-    "@types/node": "^24.5.2",
-    "@typescript-eslint/eslint-plugin": "^7.2.0",
-    "@typescript-eslint/parser": "^7.2.0",
-    "cypress": "^15.3.0",
-    "eslint": "^8.57.0",
-    "jasmine-core": "^5.10.0",
-    "jasmine-spec-reporter": "^7.0.0",
-    "karma": "^6.4.4",
-    "karma-chrome-launcher": "^3.2.0",
-    "karma-coverage": "^2.2.1",
-    "karma-jasmine": "^5.1.0",
-    "karma-jasmine-html-reporter": "^2.1.0",
-    "ng-packagr": "^18.2.1",
-    "npm-run-all": "^4.1.5",
-    "rimraf": "^6.0.1",
-    "typescript": "^5.5.4"
-  }
+    "name": "ngx-sherlock-dev",
+    "version": "3.3.2",
+    "type": "module",
+    "scripts": {
+        "start": "export NODE_OPTIONS=--openssl-legacy-provider && FORCE_COLOR=1 npm-run-all -l -p watch:*",
+        "start:app": "export NODE_OPTIONS=--openssl-legacy-provider && ng serve --open",
+        "watch:lib": "ng build @politie/ngx-sherlock --watch",
+        "watch:app": "sleep 10 && ng serve --open",
+        "clean": "rimraf coverage dist",
+        "build:dev": "ng build @politie/ngx-sherlock",
+        "build:prod": "ng build @politie/ngx-sherlock --configuration production",
+        "test": "ng test @politie/ngx-sherlock",
+        "test:ci": "ng test @politie/ngx-sherlock --no-watch --browsers=ChromeHeadless --code-coverage",
+        "lint": "ng lint",
+        "precommit": "npm-run-all clean lint test:ci build:prod precommit:e2e",
+        "precommit:e2e": "run-p start:app cypress:run",
+        "cypress:open": "cypress open --e2e --browser chrome",
+        "cypress:run": "cypress run --e2e --browser chrome"
+    },
+    "private": true,
+    "license": "Apache-2.0",
+    "dependencies": {
+        "@angular/animations": "^18.2.14",
+        "@angular/common": "^18.2.14",
+        "@angular/compiler": "^18.2.14",
+        "@angular/core": "^18.2.14",
+        "@angular/forms": "^18.2.14",
+        "@angular/platform-browser": "^18.2.14",
+        "@angular/platform-browser-dynamic": "^18.2.14",
+        "@politie/sherlock": "^3.4.16",
+        "@politie/sherlock-proxy": "^3.4.16",
+        "@politie/sherlock-rxjs": "^3.4.16",
+        "rxjs": "^6.6.7",
+        "tslib": "^2.0.0",
+        "zone.js": "~0.14.10"
+    },
+    "devDependencies": {
+        "@angular-devkit/build-angular": "^18.2.21",
+        "@angular-eslint/builder": "18.4.3",
+        "@angular-eslint/eslint-plugin": "18.4.3",
+        "@angular-eslint/eslint-plugin-template": "18.4.3",
+        "@angular-eslint/schematics": "18.4.3",
+        "@angular-eslint/template-parser": "18.4.3",
+        "@angular/cli": "^18.2.21",
+        "@angular/compiler-cli": "^18.2.14",
+        "@angular/language-service": "^18.2.14",
+        "@types/jasmine": "^5.1.9",
+        "@types/node": "^24.5.2",
+        "@typescript-eslint/eslint-plugin": "^7.2.0",
+        "@typescript-eslint/parser": "^7.2.0",
+        "cypress": "^15.3.0",
+        "eslint": "^8.57.0",
+        "jasmine-core": "^5.10.0",
+        "jasmine-spec-reporter": "^7.0.0",
+        "karma": "^6.4.4",
+        "karma-chrome-launcher": "^3.2.0",
+        "karma-coverage": "^2.2.1",
+        "karma-jasmine": "^5.1.0",
+        "karma-jasmine-html-reporter": "^2.1.0",
+        "ng-packagr": "^18.2.1",
+        "npm-run-all": "^4.1.5",
+        "rimraf": "^6.0.1",
+        "typescript": "^5.5.4"
+    }
 }
