--- a/projects/politie/ngx-sherlock/tsconfig.lib.json
+++ b/projects/politie/ngx-sherlock/tsconfig.lib.json
@@ -3,18 +3,15 @@
     "compilerOptions": {
         "outDir": "../../../out-tsc/lib",
         "declarationMap": true,
-        "module": "es2015",
-        "moduleResolution": "node",
+        "module": "ES2022",
+        "moduleResolution": "node16",
         "declaration": true,
         "sourceMap": true,
         "inlineSources": true,
         "experimentalDecorators": true,
         "importHelpers": true,
         "types": [],
-        "lib": [
-            "dom",
-            "es2015"
-        ]
+        "lib": ["dom", "ES2022"]
     },
     "angularCompilerOptions": {
         "skipTemplateCodegen": true,
@@ -23,8 +20,5 @@
         "strictInjectionParameters": true,
         "enableResourceInlining": true
     },
-    "exclude": [
-        "src/test.ts",
-        "**/*.spec.ts"
-    ]
+    "exclude": ["src/test.ts", "**/*.spec.ts"]
 }
