--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,33 +1,27 @@
 {
     "compileOnSave": false,
     "compilerOptions": {
-      "baseUrl": "./",
-      "outDir": "./dist/out-tsc",
-      "esModuleInterop": true,
-      "sourceMap": true,
-      "declaration": false,
-      "module": "es2020",
-      "moduleResolution": "node",
-      "experimentalDecorators": true,
-      "target": "ES2022",
-      "strict": true,
-      "noImplicitAny": true,
-      "noImplicitReturns": true,
-      "noUnusedLocals": true,
-      "noUnusedParameters": true,
-      "importHelpers": true,
-      "lib": [
-        "es2017",
-        "dom"
-      ],
-      "paths": {
-        "@politie/ngx-sherlock": [
-          "dist/politie/ngx-sherlock"
-        ],
-        "@politie/ngx-sherlock/*": [
-          "dist/politie/ngx-sherlock/*"
-        ]
-      },
-      "useDefineForClassFields": false
+        "baseUrl": "./",
+        "outDir": "./dist/out-tsc",
+        "esModuleInterop": true,
+        "allowSyntheticDefaultImports": true,
+        "sourceMap": true,
+        "declaration": false,
+        "module": "Node16",
+        "moduleResolution": "node16",
+        "experimentalDecorators": true,
+        "target": "ES2022",
+        "strict": true,
+        "noImplicitAny": true,
+        "noImplicitReturns": true,
+        "noUnusedLocals": true,
+        "noUnusedParameters": true,
+        "importHelpers": true,
+        "lib": ["es2017", "dom"],
+        "paths": {
+            "@politie/ngx-sherlock": ["dist/politie/ngx-sherlock"],
+            "@politie/ngx-sherlock/*": ["dist/politie/ngx-sherlock/*"]
+        },
+        "useDefineForClassFields": false
     }
 }
