--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
         "sourceMap": true,
         "declaration": false,
         "module": "Node16",
-        "moduleResolution": "node16",
+        "moduleResolution": "Node16",
         "experimentalDecorators": true,
         "target": "ES2022",
         "strict": true,
