--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,8 @@
         "allowSyntheticDefaultImports": true,
         "sourceMap": true,
         "declaration": false,
-        "module": "Node16",
-        "moduleResolution": "Node16",
+        "module": "ES2022",
+        "moduleResolution": "node",
         "experimentalDecorators": true,
         "target": "ES2022",
         "strict": true,
