--- a/projects/politie/ngx-sherlock/tsconfig.lib.json
+++ b/projects/politie/ngx-sherlock/tsconfig.lib.json
@@ -4,7 +4,7 @@
         "outDir": "../../../out-tsc/lib",
         "declarationMap": true,
         "module": "ES2022",
-        "moduleResolution": "Node16",
+        "moduleResolution": "node",
         "declaration": true,
         "sourceMap": true,
         "inlineSources": true,
